# cell_lab

./: Cargo.toml  LICENSE  README.md
cell_lab/: Cargo.toml
cell_lab/assets/shaders/: cell_material.wgsl  chemical_material.wgsl  colour_picker_area.wgsl  hsv_utils.wgsl  selection_cell_material.wgsl  slider_hue_material.wgsl
cell_lab/src/: cell.rs  despawning.rs  genome.rs  genome_bank.rs  helpers.rs  input.rs  main.rs  serialisation.rs  shader_loader.rs  state.rs
cell_lab/src/cell_editor/: drawing.rs  editor_age.rs  events.rs  history.rs  logical_cell.rs  mod.rs  simulation.rs  snapshot.rs  state.rs  systems.rs  ui.rs  ui_dialog.rs
cell_lab/src/cells/: adhesion.rs  cell.rs  cell_material.rs  mod.rs  selection_cell_material.rs
cell_lab/src/collision/: collider.rs  systems.rs
cell_lab/src/game/: game_mode.rs  game_parameters.rs  mod.rs
cell_lab/src/genomes/: daughters.rs  genome.rs  genome_bank.rs  genome_mode.rs  mod.rs
cell_lab/src/simulation/: chemical.rs  dish.rs  mod.rs  state.rs  systems.rs
cell_lab/src/spatial_partitioning/: cell_quadtree.rs  chemical_quadtree.rs  mod.rs  quadtree.rs  systems.rs
cell_lab/src/ui/: button.rs  checkbox.rs  combobox.rs  dialog_events.rs  dialog_state.rs  directional_node.rs  label.rs  mod.rs  radio.rs  separator.rs  slider.rs  test_panel.rs  ui_build.rs  ui_element.rs  ui_theme.rs  ui_theme_colour_palette.rs  ui_widget.rs  window.rs
cell_lab/src/ui/button/: button_events.rs  button_systems.rs  mod.rs
cell_lab/src/ui/checkbox/: checkbox_events.rs  checkbox_systems.rs  mod.rs
cell_lab/src/ui/colour_picker/: mod.rs  (+4 more)
(+34 files in other folders)
