[package]
name = "cell_lab"
version = "0.1.0"
edition = "2024"

[dependencies]
cell_lab_macros = { path = "../cell_lab_macros" }
bevy = {version = "0.18.1", features = ["dynamic_linking"]}
bevy_egui = "0.39.1"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.1.3", features = ["alloc"] }
strum = { version = "0.28.0", features = ["strum_macros", "derive"] }
strum_macros = "0.28.0"
